--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Python311
 include-system-site-packages = false
 version = 3.11.2
-executable = C:\Python311\python.exe
-command = C:\Python311\python.exe -m venv C:\Users\Hugo\Desktop\python cli\env
+executable = C:\Users\Hugo\Desktop\PYTHON PROJECTS\python cli\env\Scripts\python.exe
+command = C:\Users\Hugo\Desktop\PYTHON PROJECTS\python cli\env\Scripts\python.exe -m venv C:\Users\Hugo\Desktop\PYTHON PROJECTS\python cli\env
